all the things connect now, just about

--- a/app/src/main/res/layout/fragment_question_creator.xml
+++ b/app/src/main/res/layout/fragment_question_creator.xml
@@ -18,6 +18,7 @@
         android:inputType="textPersonName"
         android:textAlignment="center"
         android:textColor="@android:color/white"
+        android:textColorHint="@android:color/darker_gray"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
@@ -30,7 +31,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="Input the question answer on this page."
+        android:text="Input the question/answer on this page."
         android:textAlignment="center"
         android:textColor="@android:color/white"
         android:textSize="30sp"
@@ -39,7 +40,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/editText2"
+        android:id="@+id/correct_edittext"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
@@ -50,13 +51,14 @@
         android:inputType="textPersonName"
         android:textAlignment="center"
         android:textColor="@android:color/white"
+        android:textColorHint="@android:color/darker_gray"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/question_edittext" />
 
     <EditText
-        android:id="@+id/editText3"
+        android:id="@+id/wrong_answer_1_edittext"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
@@ -67,13 +69,14 @@
         android:inputType="textPersonName"
         android:textAlignment="center"
         android:textColor="@android:color/white"
+        android:textColorHint="@android:color/darker_gray"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText2" />
+        app:layout_constraintTop_toBottomOf="@+id/correct_edittext" />
 
     <EditText
-        android:id="@+id/editText4"
+        android:id="@+id/wrong_answer_2_edittext"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
@@ -84,13 +87,14 @@
         android:inputType="textPersonName"
         android:textAlignment="center"
         android:textColor="@android:color/white"
+        android:textColorHint="@android:color/darker_gray"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText3" />
+        app:layout_constraintTop_toBottomOf="@+id/wrong_answer_1_edittext" />
 
     <EditText
-        android:id="@+id/editText6"
+        android:id="@+id/wrong_answer_3_edittext"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
@@ -101,9 +105,10 @@
         android:inputType="textPersonName"
         android:textAlignment="center"
         android:textColor="@android:color/white"
+        android:textColorHint="@android:color/darker_gray"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText4" />
+        app:layout_constraintTop_toBottomOf="@+id/wrong_answer_2_edittext" />
 
     <Button
         android:id="@+id/save_button"
@@ -120,5 +125,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText6" />
+        app:layout_constraintTop_toBottomOf="@+id/wrong_answer_3_edittext" />
+
 </android.support.constraint.ConstraintLayout>
